moved all blog layouts to one to fix errors, cleared up meta spacing

--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -55,6 +55,10 @@ p {
   margin: 0 0 $small-spacing;
 }
 
+em {
+  font-weight: bold;
+}
+
 blockquote {
   border-left: 4px solid $medium-gray;
   color: $medium-gray;
