--- a/source/stylesheets/partials/_layout.scss
+++ b/source/stylesheets/partials/_layout.scss
@@ -19,5 +19,3 @@ body {
   @extend %large-column;
 }
 
-.grid {
-}
